 * #1680 (QuadraticBasisFactory multiplies cross products by 2)
 * #1710 (Misleading y labels in VisualTest.DrawPairsMarginals())
 * #1713 (The doc of the ResourceMap does not match the content of the ResourceMap)
 * #1714 (The log-PDF of the Pareto is wrong)
 * #1721 (The `draw` method of `SobolSimulationAlgorithm` does not reuse the descriptions)


== 1.16 release (2020-11-16) == #release-1.16

=== Library ===

==== Major changes ====
 * Drop normalization in KrigingAlgorithm
 * Drop normalization & transformation handling in GeneralLinearModelAlgorithm
 * XML/H5 storage (hdf5 library)
 * C++11 requirement

==== New classes ====
 * BlockIndependentDistribution
 * FejerAlgorithm
 * GridLayout
 * MinimumVolumeClassifier
 * StationaryFunctionalCovarianceModel
 * XMLH5StorageManager

==== API changes ====
 * Removed deprecated Weibull, WeibullFactory, WeibullMuSigma classes
 * Removed deprecated GumbelAB class
 * Removed deprecated Event class
 * Removed deprecated EnumerateFunction constructors
 * Removed various deprecated distribution accessors
 * Deprecated Pairs class, see VisualTest.DrawPairs
 * Deprecated SORMResult::getEventProbabilityHohenBichler, use SORMResult::getEventProbabilityHohenbichler instead
 * Deprecated SORMResult::getGeneralisedReliabilityIndexHohenBichler, use SORMResult::getGeneralisedReliabilityIndexHohenbichler instead
 * Renamed SobolSequence::MaximumNumberOfDimension as SobolSequence::MaximumDimension
 * Added VisualTest::DrawLinearModel(linearModelResult), useful if the test is performed on the training samples
 * Added VisualTest::DrawLinearModelResidual(linearModelResult), useful if the test is performed on the training samples
 * Deprecated OptimizationResult::getLagrangeMultipliers
 * Moved OptimizationAlgorithm::computeLagrangeMultipliers to OptimizationResult
 * Added AIC & BestModelAIC static methods in FittingTest
 * Added AICC & BestModelAICC static methods in FittingTest