@@ -35,6 +35,7 @@
  * #1713 (The doc of the ResourceMap does not match the content of the ResourceMap)
  * #1714 (The log-PDF of the Pareto is wrong)
  * #1721 (The `draw` method of `SobolSimulationAlgorithm` does not reuse the descriptions)
+ * #1729 (LinearModelAnalysis sometimes fail)
 
 
 == 1.16 release (2020-11-16) == #release-1.16
